--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,7 +32,7 @@ repos:
     additional_dependencies: 
     - flake8-typing-imports==1.12.0
     - flake8-black>=0.1.1
-    args: ['--max-line-length=89', '--extend-ignore=E203']
+    args: ['--max-line-length=89', '--extend-ignore=E203', '--exclude=hackerpet/__init__.py']
     language_version: python3
 - repo: https://github.com/psf/black
   rev: 22.6.0
