--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,7 +1,9 @@
-name: Publish to Test PyPI
-on: workflow_dispatch
+name: Publish Python Package to PyPI
+on:
+  release:
+    types: [published]
 jobs:
-  publish-to-test:
+  publish:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -16,8 +18,9 @@ jobs:
         poetry install
     - name: Build
       run: poetry build
-    - name: Publish to Test PyPI
+    - name: Build
+      run: poetry build
+    - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository_url: https://test.pypi.org/legacy/
+        password: ${{ secrets.PYPI_API_TOKEN }}
