--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.10"
 aiohttp = {extras = ["speedups"], version = "^3.8.1"}
+aiohttp-retry = "^2.7.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.20.0"
